<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="prefs_sms_gateway_out_title">Gateway number</string>
    <string name="prefs_sms_gateway_in_title">Known gateways numbers</string>
    <string name="pref_language_title">Language</string>
    <string name="action_settings">Settings</string>
    <string name="report_weekly">Weekly report</string>
    <string name="report_weekly_short">Weekly report</string>
    <string name="report_monthly">Monthly report</string>
    <string name="report_monthly_short">@string/report_monthly</string>
    <string name="alert">Alert</string>
    <string name="history">History</string>
    <string name="history_ressend_confirmation">Do you want to resend this report?\n%1$s</string>
    <string name="title_activity_activity_settings">@string/action_settings</string>
    <string name="title_activity_activity_report_weekly">@string/report_weekly</string>
    <string name="title_activity_activity_report_monthly">@string/report_monthly</string>
    <string name="title_activity_activity_report_detail">Report detail</string>
    <string name="title_activity_activity_alert">@string/alert</string>
    <string name="title_activity_activity_history">@string/history</string>
    <string name="title_activity_activity_historydetail">History detail</string>
    <string name="title_activity_activity_synchronisation">@string/synchronization</string>
    <string name="send_report">Send</string>
    <string name="synchronization">Synchronisation</string>
    <string name="aucun_serveur_configure">No server configured</string>
    <string name="sending_alert">Alert sending in progress</string>
    <string name="sent_alert">Alert sent</string>
    <string name="sending_report_weekly">Weekly report sending in progress</string>
    <string name="sent_report_weekly">Weekly report sent</string>
    <string name="sending_report_monthly">Monthly report sending in progress</string>
    <string name="sent_report_monthly">Monthly report sent</string>
    <string name="sent_report_errors">Some errors occurs when trying to send the report. Please try to resend error messages via the history</string>
    <string name="missing_fields">Complete all required fields</string>
    <string name="epidemiologique_week">Week\nepidemiologic</string>
    <string name="epidemiologique_month">Month</string>
    <string name="zero">zero case and death</string>
    <string name="unknown">Unknown</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="sync_in_progress_since">Synchronisation running since %1$s. %2$d received messages.</string>
    <string name="last_sync">"Last synchronisation on %s "</string>
    <string name="sms_count">%1$d/%2$d</string>
    <string name="limit_reached">Maximum character number exceeded</string>
    <string name="format_week_from">from %1$d/%2$d/%3$d</string>
    <string name="format_week_to">to %1$d/%2$d/%3$d</string>
    <string name="report_not_sent">Report not sent</string>
    <string name="alert_not_sent">Alert not sent</string>
    <string name="sync">Sync</string>
    <string name="minus">-</string>
    <string name="ok">OK</string>
    <string name="plus">+</string>
    <string name="reminder_send_report_for_week">Please send report for week %d</string>
    <string name="reminder_send_report_for_month">Please send report for month %d</string>
    <string name="annuler">Cancel</string>
    <string name="send_report_weekly">Send weekly report from week %1$d - %2$d?\n%3$s</string>
    <string name="send_report_monthly">Send monthly report from month %1$02d - %2$d?\n%3$s</string>
    <string name="field_wrong">Please ensure this field is correctly set and try again.</string>
    <string name="month_year">%1$02d/%2$d</string>
    <string name="no_network">No network available</string>
    <string name="no_network_alert">No network available, you will not be able to send the report</string>
    <string name="title_activity_activity_push">Notifications</string>
    <string name="developed_with_oms"></string>
    <string name="skip">Skip</string>

    <string-array name="prefs_languages_labels_array">
        <item name="english">English</item>
        <item name="french">French</item>
    </string-array>

    <string-array name="prefs_languages_values_array" translatable="false">
        <item name="english">en_GB</item>
        <item name="french">fr</item>
    </string-array>

    <string name="title_activity_empty" translatable="false">EmptyActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_quit_report">Report not sent, leave anyway ?</string>
    <string name="sure_quit_alert">Alert not sent, leave anyway ?</string>
    <string name="warning">Warning</string>
    <string name="information">Information</string>
    <string name="sync_restart">After synchronisation the application will restart</string>
    <string name="warning_already_sent">Warning, the report for this date was already sent</string>
    <string name="test_mode">Test mode</string>
    <string name="warning_test_mode">Warning, Argus is in test mode, the sms will be ignored by the server.</string>
    <string name="sms_not_sent">Sending sms cancelled.</string>
    <string name="superior_equals">superior or equal to</string>
    <string name="inferior_equals">inferior or equal to</string>
    <string name="inferior">inferior to</string>
    <string name="superior">superior to</string>
    <string name="different">different from</string>
    <string name="field_constraint_error_prefix">This field must be</string>
    <string name="fake_synch">Fake Synchronization</string>
    <string name="network_lock">Lock sms when no Network</string>
    <string name="error_title">Error</string>
    <string name="check_credit">GSM network error. Please check your credit or contact your provider</string>
    <string name="enter_password">Enter password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="settings_password">Change Password</string>
    <string name="enter_new_password">Enter the new password</string>
    <string name="confirm_new_password">Confirm the new password</string>
    <string name="define_new_password">Define a new password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="password_changed">Password has been changed</string>

    <string name="warning_identical_report_title">Identical report</string>
    <string name="warning_identical_report_message">Warning, an identical report was already sent</string>
    <string name="warning_identical_report_send_history_message">An identical report was already sent but is on error. Only error messages will be sent again.</string>

    <string name="warning_external_argus_alert_not_found">Argus Alert application not installed</string>

    <!-- General configuration -->
    <string name="prefs_category_general">General configuration</string>

    <!-- Alert Configuration -->
    <string name="prefs_category_alert">Alert configuration</string>
    <string name="prefs_config_alert_external_title">Use Argus Alert Application</string>

    <!-- SMS Configuration -->
    <string name="prefs_category_config_SMS">SMS configuration</string>
    <string name="prefs_config_sms_enable_title">Enable configuration via SMS</string>
    <string name="prefs_config_only_known_gateway_title">Only known gateways</string>
    <string name="prefs_config_encrypt_security_key_title">Encryption security key</string>
</resources>