<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingStart="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".fragment.FragmentDashboard">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dashboard_item_height"
        android:layout_marginTop="@dimen/dashboard_item_margin"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_dashboard_report_weekly"
            style="@style/OMSCardView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="false">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp">
                android:paddingEnd="5dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/fragment_dashboard_Image_Weekly"
                        android:layout_width="@dimen/dashboard_image_size"
                        android:layout_height="@dimen/dashboard_image_size"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_semaine"/>
                </FrameLayout>

                <View
                    android:id="@+id/fragment_dashboard_Separator_weekly"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/oms_grey"/>

                <TextView
                    android:id="@+id/fragment_dashboard_TextView_weekly"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    tools:text="@string/report_weekly_short"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_dashboard_report_monthly"
            style="@style/OMSCardView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/fragment_dashboard_Image_Monthly"
                        android:layout_width="@dimen/dashboard_image_size"
                        android:layout_height="@dimen/dashboard_image_size"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_mois"/>

                </FrameLayout>


                <View
                    android:id="@+id/fragment_dashboard_Separator_monthly"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/oms_grey"/>

                <TextView
                    android:id="@+id/fragment_dashboard_TextView_monthly"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    tools:text="@string/report_monthly_short"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="@dimen/dashboard_item_height"
        android:layout_marginTop="@dimen/dashboard_item_margin"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_dashboard_history"
            style="@style/OMSCardView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/fragment_dashboard_Image_history"
                        android:layout_width="@dimen/dashboard_image_size"
                        android:layout_height="@dimen/dashboard_image_size"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_historique"/>
                </FrameLayout>

                <View
                    android:id="@+id/fragment_dashboard_Separator_history"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/oms_grey"/>

                <TextView
                    android:id="@+id/fragment_dashboard_TextView_history"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    tools:text="@string/history"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_dashboard_alert"
            style="@style/OMSCardView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:enabled="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/fragment_dashboard_Image_alert"
                        android:layout_width="@dimen/dashboard_image_size"
                        android:layout_height="@dimen/dashboard_image_size"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_alerte"/>
                </FrameLayout>

                <View
                    android:id="@+id/fragment_dashboard_Separator_alert"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/oms_grey"/>

                <TextView
                    android:id="@+id/fragment_dashboard_TextView_alert"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    tools:text="@string/alert"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ProgressBar
            android:id="@+id/fragment_dashboard_Progressbar_sync"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"/>

        <TextView style="@style/text_sync_style"
            android:id="@+id/fragment_dashboard_TextView_sync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sync_in_progress_since"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/fragment_dashboard_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/appversion"
            android:textSize="10sp"/>
    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/oms_grey"/>

    <include
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        layout="@layout/fragment_dashboard_footer" />
</LinearLayout>
